--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.16.0",
     "convex": "^1.23.0",
+    "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svix": "^1.64.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
